# AsunaFirmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions_ota.csv  partitions_single.csv  sdkconfig.defaults
.github/workflows/: idf-build.yaml
components/freertos_cellular/: CMakeLists.txt
components/freertos_cellular/platform/include/: cellular_config.h  cellular_platform.h
components/freertos_cellular/platform/src/: cellular_platform.c
components/frontend/: CMakeLists.txt
components/frontend/include/: frontend_manager.h
components/frontend/src/: frontend_manager.c
components/lora_modem/: CMakeLists.txt
components/lora_modem/hal/: llcc68_hal.c  llcc68_hal_init.h
components/lora_modem/include/: lora_modem.h
components/lora_modem/src/: lora_modem.c
components/lora_modem/src/hal/: llcc68_hal.c
components/multipart_parser/: CMakeLists.txt
components/nl/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/app/: api_server.c  app_console.c  console_common.c  gnss_server.c  lora_server.c  netif_common.c  netif_lte.c  netif_wifi.c  version_manager.c  vfs_common.c
main/app/api/: handler_index.c  handler_static.c
main/app/api/config/: handler_lora.c  handler_upgrade.c  handler_wifi.c
main/app/api/gnss/: handler_stream.c
main/app/api/status/: handler_network.c  handler_wifi.c
main/app/console/: cmd_free.c  cmd_gnss.c  cmd_gnss_server_test.c  cmd_ip.c  cmd_lora.c  cmd_ps.c  cmd_reset.c  cmd_system.c  cmd_system_common.c  cmd_version.c  cmd_wifi.c
main/include/app/: api_server.h  app_console.h  console_common.h  gnss_server.h  lora_server.h  netif_common.h  netif_lte.h  netif_wifi.h  version_manager.h  vfs_common.h
main/include/app/api/: handler_index.h  handler_static.h
main/include/app/api/config/: handler_lora.h  handler_upgrade.h  handler_wifi.h
main/include/app/api/gnss/: handler_stream.h
main/include/app/api/status/: handler_network.h  handler_wifi.h
main/include/app/console/: cmd_free.h  cmd_gnss.h  cmd_gnss_server_test.h  cmd_ip.h  cmd_lora.h  cmd_ps.h  cmd_reset.h  cmd_version.h  cmd_wifi.h  private.h
