idf_component_register(SRCS
    "air780e/source/cellular_air780e.c"
    "air780e/source/cellular_air780e_api.c"
    "air780e/source/cellular_air780e_urc_handler.c"
    "air780e/source/cellular_air780e_wrapper.c"
    "platform/src/cellular_platform.c"
    "src/source/cellular_3gpp_api.c"
    "src/source/cellular_3gpp_urc_handler.c"
    "src/source/cellular_at_core.c"
    "src/source/cellular_common.c"
    "src/source/cellular_common_api.c"
    "src/source/cellular_pkthandler.c"
    "src/source/cellular_pktio.c"
INCLUDE_DIRS
    "air780e/source"
    "platform/include"
    "src/source/include"
    "src/source/include/common"
    "src/source/interface"
    "src/source/include/private"
)
